; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/fs/xfs/quota/extr_xfs_qm_bhv.c_xfs_qm_statvfs.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/fs/xfs/quota/extr_xfs_qm_bhv.c_xfs_qm_statvfs.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_7__ = type { i32* }
%struct.kstatfs = type { i32 }
%struct.TYPE_8__ = type { i32 }

@XFS_DQ_PROJ = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @xfs_qm_statvfs(%struct.TYPE_7__* %0, %struct.kstatfs* %1) #0 {
  %3 = alloca %struct.TYPE_7__*, align 8
  %4 = alloca %struct.kstatfs*, align 8
  %5 = alloca i32*, align 8
  %6 = alloca %struct.TYPE_8__*, align 8
  store %struct.TYPE_7__* %0, %struct.TYPE_7__** %3, align 8
  store %struct.kstatfs* %1, %struct.kstatfs** %4, align 8
  %7 = load %struct.TYPE_7__*, %struct.TYPE_7__** %3, align 8
  %8 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %7, i32 0, i32 0
  %9 = load i32*, i32** %8, align 8
  store i32* %9, i32** %5, align 8
  %10 = load i32*, i32** %5, align 8
  %11 = load %struct.TYPE_7__*, %struct.TYPE_7__** %3, align 8
  %12 = call i32 @xfs_get_projid(%struct.TYPE_7__* %11)
  %13 = load i32, i32* @XFS_DQ_PROJ, align 4
  %14 = call i32 @xfs_qm_dqget(i32* %10, i32* null, i32 %12, i32 %13, i32 0, %struct.TYPE_8__** %6)
  %15 = icmp ne i32 %14, 0
  br i1 %15, label %23, label %16

16:                                               ; preds = %2
  %17 = load %struct.kstatfs*, %struct.kstatfs** %4, align 8
  %18 = load %struct.TYPE_8__*, %struct.TYPE_8__** %6, align 8
  %19 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %18, i32 0, i32 0
  %20 = call i32 @xfs_fill_statvfs_from_dquot(%struct.kstatfs* %17, i32* %19)
  %21 = load %struct.TYPE_8__*, %struct.TYPE_8__** %6, align 8
  %22 = call i32 @xfs_qm_dqput(%struct.TYPE_8__* %21)
  br label %23

23:                                               ; preds = %16, %2
  ret void
}

declare dso_local i32 @xfs_qm_dqget(i32*, i32*, i32, i32, i32, %struct.TYPE_8__**) #1

declare dso_local i32 @xfs_get_projid(%struct.TYPE_7__*) #1

declare dso_local i32 @xfs_fill_statvfs_from_dquot(%struct.kstatfs*, i32*) #1

declare dso_local i32 @xfs_qm_dqput(%struct.TYPE_8__*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
